# largest_min_prime_factor

./: CMakeLists.txt  DESCRIPTION  README.md
include/: parallel_prime_decomposition.h  pf.h  pf_thread.h  pf_thread_args.h  primes.h  utils.h
src/: main.cpp  parallel_prime_decomposition.cpp  pf.cpp  pf_thread.cpp
